--- a/Build_and_Print_a_LinkedList.ipynb
+++ b/Build_and_Print_a_LinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfNrb9tAZtXMSgX9tQ8RyK",
+      "authorship_tag": "ABX9TyMPaLOtePIzDV7itZK5WlP1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,12 +131,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class ListNode:\n",
+        "    def __init__(self, val=0, next=None):\n",
+        "        self.val = val\n",
+        "        self.next = next"
+      ],
       "metadata": {
         "id": "6MSBetKy4jFh"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "head = ListNode(1)\n",
+        "head.next = ListNode(2)\n",
+        "head.next.next = ListNode(3)"
+      ],
+      "metadata": {
+        "id": "jvwdl_Q0K_k9"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "head.next.val"
+      ],
+      "metadata": {
+        "id": "uksbI9fELFB1",
+        "outputId": "9f0e481c-402c-475e-fadf-bc1bbbce77a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     }
   ]
 }
