making a tree and print

--- a/Build_and_Print_a_LinkedList.ipynb
+++ b/Build_and_Print_a_LinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPaLOtePIzDV7itZK5WlP1",
+      "authorship_tag": "ABX9TyNrHESkqxX8hKKeh1LaWnf0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,11 +162,11 @@
         "head.next.val"
       ],
       "metadata": {
-        "id": "uksbI9fELFB1",
-        "outputId": "9f0e481c-402c-475e-fadf-bc1bbbce77a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uksbI9fELFB1",
+        "outputId": "9f0e481c-402c-475e-fadf-bc1bbbce77a8"
       },
       "execution_count": 7,
       "outputs": [
@@ -179,6 +179,181 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TreeNode:\n",
+        "  def __init__(self, val=0, left=None, right=None):\n",
+        "    self.val = val\n",
+        "    self.left = left\n",
+        "    self.right = right"
+      ],
+      "metadata": {
+        "id": "1Nh7NVDQLVI-"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "root = TreeNode(22)\n",
+        "root.left = TreeNode(7)\n",
+        "root.right = TreeNode(5)\n",
+        "root.left.left = TreeNode(1)\n",
+        "root.left.right = TreeNode(3)\n",
+        "root.right.right = TreeNode(9)\n"
+      ],
+      "metadata": {
+        "id": "-5fhEARXLz3s"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "        22\n",
+        "       /  \\\n",
+        "      7    5\n",
+        "     / \\    \\\n",
+        "    1   3    9\n"
+      ],
+      "metadata": {
+        "id": "H-2NlJ-vPYCJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_TreeNodes(node):\n",
+        "  if not node:\n",
+        "        return\n",
+        "  print(node.val)\n",
+        "  print_TreeNodes(node.left)\n",
+        "  print_TreeNodes(node.right)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "ySOULmyHL9e4"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_TreeNodes(root)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EHxH3EWfOTtk",
+        "outputId": "bb95ebd2-ceae-4dd3-965a-ec2fd3026475"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "22\n",
+            "7\n",
+            "1\n",
+            "3\n",
+            "5\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| Method                | Time Complexity | Space Complexity        | Notes                                    |\n",
+        "| --------------------- | --------------- | ----------------------- | ---------------------------------------- |\n",
+        "| Preorder (recursive)  | O(n)            | O(h) = O(log n) to O(n) | Uses call stack, space depends on height |\n",
+        "| Level-order (`deque`) | O(n)            | O(n)                    | Uses queue, space depends on width       |\n"
+      ],
+      "metadata": {
+        "id": "ht63dYE2XOaf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import deque\n",
+        "\n",
+        "def print_tree_with_deque(root):\n",
+        "    if not root:\n",
+        "        print([])\n",
+        "        return\n",
+        "\n",
+        "    result = []\n",
+        "    queue = deque([root])  # start with root in the queue\n",
+        "\n",
+        "    while queue:\n",
+        "        node = queue.popleft()  # fast O(1) removal from front\n",
+        "        if node:\n",
+        "            result.append(node.val)\n",
+        "            queue.append(node.left)\n",
+        "            queue.append(node.right)\n",
+        "        else:\n",
+        "            result.append(\"Null\")\n",
+        "\n",
+        "    # Optional: remove extra \"Null\" values from the end\n",
+        "    while result and result[-1] == \"Null\":\n",
+        "        result.pop()\n",
+        "\n",
+        "    print(result)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xiUIpG7KVw0P"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "root = TreeNode(22)\n",
+        "root.left = TreeNode(7)\n",
+        "root.right = TreeNode(5)\n",
+        "root.left.left = TreeNode(1)\n",
+        "root.left.right = TreeNode(3)\n",
+        "root.right.right = TreeNode(9)"
+      ],
+      "metadata": {
+        "id": "V8oNZeTwXfBL"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_tree_with_deque(root)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0RBcBBngXjNe",
+        "outputId": "1a9dac53-6b17-4254-96d0-01ca2d681dbf"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[22, 7, 5, 1, 3, 'Null', 9]\n"
+          ]
         }
       ]
     }
